css/datenight.css
body {
    background-color: #808080;
}
h1 {
    color: white;
    font-family: 'Liu Jian Mao Cao', cursive;
    font-size: 75px;
    text-align: center;
    padding-bottom: 50px;
    /* z-index: auto; */
}

#dish {
    flex-direction: column;
    justify-content: center;


}
#mybox {
    display: flex;
    justify-content: space-evenly;

}
#mybox > * {
    display: flex;
    flex-direction: column;
    padding: 100px 40px 100px 40px;
    background-color: lightgrey;
    border-color: black;
    border-radius: 20px;
    border-style: solid;
    margin-bottom: 50px;
    margin-top: 50px;
    
}
#mealContainer, #drinkContainer{
    margin: 0 auto;
    text-align: center;
    font-family: 'Gotu', sans-serif;
}
#container {
   
    background-color: gainsboro;
    padding: 10px;
    
}

#genMealSearchTitle, #genDrinkSearchTitle {
   
    background-color: black;
    padding: 10px;
    font-size: medium;
    
}

#searchTitle {
   
    font-size: x-large;
    color: whitesmoke;
    
}

#instructions {
    max-width: 900px;
    text-align: center;
    padding-top: 40px;
    padding-bottom: 25px;
    margin: 0 auto;
}
#dish {
    text-align: center;
    margin: 0 auto;
    padding-top: 40px;
    padding-bottom: 30px;
}

select {
    width: 250px;
}

#areaText, #drinkAlcoholText{

    margin-top: 25px;
}


/*-- This is code is for the Gradient -->*/

#canvas-image {
    position: absolute;
    display: block;
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: -1;
}

